--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,46 @@
 beautifulsoup4==4.11.1
-Bottleneck==1.3.5
+Bottleneck==1.3.4
 Brotli==1.0.9
 brotlipy==0.7.0
-certifi==2022.9.14
-cffi==1.15.1
+certifi==2022.6.15
+cffi==1.15.0
 charset-normalizer==2.0.4
-click==8.0.4
+click==8.1.3
 colorama==0.4.5
 cryptography==37.0.1
-dash==2.0.0
+dash==2.6.1
 dash-bootstrap-components==1.2.1
-dash-core-components==1.3.1
-dash-html-components==1.0.1
-dash-renderer==1.1.2
-dash-table==4.4.1
-Flask==2.1.3
-Flask-Compress==1.10.1
-future==0.18.2
-html5lib==1.1
+Flask==2.2.2
+Flask-Compress==1.12
 idna==3.3
-importlib-metadata==4.11.3
-itsdangerous==2.0.1
-Jinja2==3.0.3
+importlib-metadata==4.11.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
 lxml==4.8.0
 MarkupSafe==2.1.1
 mkl-fft==1.3.1
 mkl-random==1.2.2
 mkl-service==2.4.0
-numexpr==2.8.3
-numpy==1.23.1
+numexpr==2.8.1
+numpy==1.22.3
 packaging==21.3
-pandas==1.4.3
+pandas==1.4.2
 pip==22.1.2
-plotly==5.9.0
+plotly==5.10.0
 pycparser==2.21
 pyOpenSSL==22.0.0
-pyparsing==3.0.9
+pyparsing==3.0.4
 PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2022.1
-PyYAML==6.0
-requests==2.28.1
+requests==2.27.1
 setuptools==63.4.1
 six==1.16.0
-soupsieve==2.3.1
+soupsieve==2.3.2.post1
 tenacity==8.0.1
-urllib3==1.26.11
-webencodings==0.5.1
-Werkzeug==2.0.3
+urllib3==1.26.9
+Werkzeug==2.2.2
 wheel==0.37.1
 win-inet-pton==1.1.0
 wincertstore==0.2
-zipp==3.8.0
+zipp==3.8.1
