--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ dash==2.6.1
 dash-bootstrap-components==1.2.1
 Flask==2.2.2
 Flask-Compress==1.12
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
